Modified authors.yml and 2024-10-30-POPQUIZ.md

--- a/Docusaurus/blog/2024-10-30-POPQUIZ.md
+++ b/Docusaurus/blog/2024-10-30-POPQUIZ.md
@@ -1,16 +1,7 @@
 ---
-title: Pop Quiz
-date: 2024-10-30
 slug: POP-QUIZ
-authors: 
-  - name: Erdafa Andikri
-    title: dafandikri
-    url: https://github.com/dafandikri
-    image_url: https://github.com/dafandikri.png
-  - name: Abhiseka Susanto
-    title: githubhiseka
-    url: https://github.com/githubhiseka
-    image_url: https://github.com/githubhiseka.png
+title: Pop Quiz
+authors: [dafandikri, githubhiseka]
 tags: [POPQUIZ, WEEK07]
 ---
 
